fixed tooltip being partially hidden by overflow on first town

--- a/TerrariaHappinessCalculator/style.css
+++ b/TerrariaHappinessCalculator/style.css
@@ -99,7 +99,7 @@ a {
     .npc .tooltip {
         display: none;
         position: absolute;
-        top: -100px;
+        top: -70px;
         left: 100%;
         z-index: 20;
         margin-left: 20px;
